# stock_platform

./: .gitignore  README.md  main.py  manual_requirements.txt  pyproject.toml  requirements.txt  setup.py  testing_learnings.ipynb
.github/workflows/: ci-tests-app.yml
src/app/: app.py  single_page_app.py  test_plot.py
src/app/assets/: style.css  styles.css
src/pages/: home.py  landingpage.py  plotpage.py
src/tabs/: llm_explainer.py  table_tab.py
src/utils/: config.py  exploration_notebook.ipynb  isin_ticker_checkups.py  llm_client.py  metrics.py  misc.py  plots.py  transforms.py
tests/: test_plot.py  test_user_input.py
