[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_dashboard"
version = "0.1.0"
description = "Your scalable stock dashboard"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    dash==3.2.0,
    dash_bootstrap_components==2.0.4,
    dash_bootstrap_templates==2.1.0,
    pandas==2.3.2,
    plotly==6.3.0,
    pytest==8.4.2,
    yfinance==0.2.66,
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
